--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Cedar Étoile</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -9,7 +10,7 @@
     <header>
             <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Cedar Étoile</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="work.html">Work</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -27,3 +28,4 @@
     
 </body>
 </html>
+
