--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
     </header>
     <section class="feature box ">
         <div class="contact">
+            <p><strong>Contact:</strong></p>
             <p>@cedartaatawasi</p>
             <p>cedartaatawasi@gmail.com</p>
         </div>
