--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <section class="feature box">
         <div class="nations">
-            <li><b>Cedar</b></li>
+            <li><strong>Cedar</strong></li>
             <li>Kwakwakaʼwakw</li>
             <li>Nuuchahnulth</li>
             <li>Métis</li>
